Initial styling for the page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <header class="header">
+            <h1>Rock Paper Scissors</h1>
             <button id="restart" class="restart-btn">Restart Game</button>
             <div id="score" class="score">
                 <p>Player: 0</p>
