JS: display modal for winning or losing

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <h1>Rock Paper Scissors</h1>
             <button id="restart" class="restart-btn">Restart Game</button>
             <div id="score" class="score">
-                <p>Player: 0</p>
-                <p>Computer: 0</p>
+<!--                <p>Player: 0</p>-->
+<!--                <p>Computer: 0</p>-->
             </div>
         </header>
         <h2>Make Your Selection</h2>
@@ -31,9 +31,9 @@
     <!-- Modal -->
     <div class="modal">
         <div id="result" class="modal-content">
-            <h1 class="text-win">You Win</h1>
-            <i class="fas fa-hand-rock fa-10x"></i>
-            <p>Computer Chose Rock</p>
+<!--            <h1 class="text-win">You Win</h1>-->
+<!--            <i class="fas fa-hand-rock fa-10x"></i>-->
+<!--            <p>Computer Chose Rock</p>-->
         </div>
     </div>
 
